@startuml BDD - Schéma relationnel
title BDD - Schéma relationnel
!theme plain
hide circle

entity Item{
  <u>id</u>
  --
  name
  priceExVAT
  VATPercentage
  leftInStock
  description
  image
  categoryName
}
entity Category{
  <u>name</u>
  --
  description
}
entity Referent{
  <u>id</u>
  --
  designation
  firstName
  lastName
  birthDate
  isAlive 
  nickname [0..1]
  website [0..1]
  schoolOfThoughId
  deliveryAddressId
}
entity SchoolOfThough{
  <u>id</u>
  --
  name
  description
}
entity Order{
  <u>id</u>
  --
  creationTime
  employeeId
  clientId
}
entity Client{
  <u>id</u>
  --
  firstName
  lastName
  deliveryAddressId
}
entity OrderLine{
  <u>orderId</u>
  <u>itemId</u>
  --
  quantity
  priceAtTheTime
}


entity Coupon{
  <u>code</u>
  --
  discountPercentage
}

entity Employee{
  <u>id</u>
  --
  firstName
  lastName
  hiringDate
  salary
}
entity Country{
  <u>name</u>
  --
  isSupported 
}
entity Locality{
  <u>id</u>
  --
  name
  zipCode
  isSupported 
  countryName
}
entity DeliveryAddress{
  <u>id</u>
  --
  isPickupPoint 
  numInStreet
  streetName
  box [0..1]
  localityId
}

entity OrderCoupon{
  <u>orderId</u>
  <u>couponCode</u>
}
entity ItemReferent{
  <u>itemId</u>
  <u>referentId</u>
}

Item::categoryName --> Category::name

Referent::schoolOfThoughId --> SchoolOfThough::id
Referent::deliveryAddressId --> DeliveryAddress::id

Order::employeeId --> Employee::id
Order::clientId --> Client::id

Client::deliveryAddressId --> DeliveryAddress::id

OrderLine::orderId --> Order::id
OrderLine::itemId --> Item::id

Locality::countryName --> Country::name
DeliveryAddress::localityId --> Locality::id

OrderCoupon::orderId --> Order::id
OrderCoupon::couponCode --> Coupon::code

ItemReferent::itemId --> Item::id
ItemReferent::referentId --> Referent::id
Referent::address --> DeliveryAddress::id
@enduml